<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Type anything…</string>
    <string name="all_notes">Notes</string>
    <string name="already_purchased_but_uninstalled_ncontact_hello_praveen_io_or_hellopraveenio_nto_get_back_your_premium_status">Need Assistance? Contact hello@praveen.io (or) @HelloPraveenIO to get back your Premium status!</string>
    <string name="app_name">Notes</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application">Application</string>
    <string name="backup">Backup</string>
    <string name="bin">Trash</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy">Copy</string>
    <string name="default_web_client_id">898305543459-1ncnbv8g9e4bd4pvs647nddairrlsihu.apps.googleusercontent.com</string>
    <string name="define_materialstyleddialogs" />
    <string name="del_note">To delete, go back and press the trash icon.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="empty_bin">Nothing found to restore or delete, keep noting!</string>
    <string name="empty_list">"It's empty, note down things here!"</string>
    <string name="empty_list_image">"It's Empty"</string>
    <string name="firebase_database_url">https://notes-12222.firebaseio.com</string>
    <string name="gcm_defaultSenderId">898305543459</string>
    <string name="google_api_key">AIzaSyCuH23hIAEV4_cafwDum7B7SX38UWdwZ1I</string>
    <string name="google_app_id">1:898305543459:android:f52ff99cad327937</string>
    <string name="google_crash_reporting_api_key">AIzaSyCuH23hIAEV4_cafwDum7B7SX38UWdwZ1I</string>
    <string name="google_storage_bucket">notes-12222.appspot.com</string>
    <string name="important">Bookmarked</string>
    <string name="important_caps">BOOKMARKED</string>
    <string name="library_materialstyleddialogs_author">Javier Santos</string>
    <string name="library_materialstyleddialogs_authorWebsite">https://github.com/javiersantos</string>
    <string name="library_materialstyleddialogs_isOpenSource">true</string>
    <string name="library_materialstyleddialogs_libraryDescription">A library that shows a beautiful and customizable Material dialog with header and animation.</string>
    <string name="library_materialstyleddialogs_libraryName">MaterialStyledDialogs</string>
    <string name="library_materialstyleddialogs_libraryWebsite">https://github.com/javiersantos/MaterialStyledDialogs</string>
    <string name="library_materialstyleddialogs_licenseId">apache_2_0</string>
    <string name="library_materialstyleddialogs_repositoryLink">https://github.com/javiersantos/MaterialStyledDialogs</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="note_down_everything_you_need">Note down everything you need!</string>
    <string name="note_title_optional">Title</string>
    <string name="notes">Notes</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="premium">Premium</string>
    <string name="project_id">notes-12222</string>
    <string name="redeem_promo_code">REDEEM PROMO CODE</string>
    <string name="restore">RESTORE</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search">Type to search…</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="the_simplest_note_taking_app">The simplest note taking app!</string>
    <string name="type_note">Notes</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_to_enjoy_an_ad_free_experience_and_get_assured_of_lifetime_premium_with_all_new_feature_additions">Upgrade to enjoy an ad-free experience and get assured of lifetime premium with all new feature additions!</string>
    <string name="you_re_not_premium">"You're not premium!"</string>
</resources>
