<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/about_scroll" android:background="@color/colorIcons" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="120.0dip" android:adjustViewBounds="true" android:cropToPadding="true" android:contentDescription="@string/about" app:srcCompat="@drawable/bg3" />
    <TextView android:textSize="22.0sp" android:textColor="@color/colorPrimaryText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/type_note" android:textAlignment="center" />
    <TextView android:textColor="@color/colorSecondaryText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/the_simplest_note_taking_app" android:textAlignment="center" />
    <android.support.v7.widget.RecyclerView android:id="@id/aboutRecyclerView" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="48.0dip" />
</LinearLayout>